- Fixed glitches in mobile dropdown - Added image size stabilization during loading (ratio and minheight) - Improved banner text performance and sizing on small devices - Uniform naming of 'TC2 Node Painter' - Disabled debug for HiSrc image loading - Added side navigation list for jumping between paragraphs - Navigation list follows top window edge (Only used in TC2 Node Painter Documentation so far)

--- a/css/style.css
+++ b/css/style.css
@@ -37,15 +37,6 @@ body {
 	margin: 0 auto;
 	padding: 0;
 }
-@media screen and (min-width: 40em) { 
-	.container { padding: 0 1%; }
-}
-@media screen and (min-width: 65em) { 
-	.container { width: 85%; }
-}
-@media screen and (min-width: 90em) { 
-	.container { width: 70%; }
-}
 
 
 /*#region HEADER*/
@@ -155,7 +146,6 @@ body {
 	display: block;
 	position: absolute;
 }
-
 /* -- Header Navigation Bar (overwrite) -- */
 /* Disabling dropdown button, displaying navList horizontally as a bar with subContent as dropdowns on hover */
 @media screen and (min-width: 40em) {
@@ -163,14 +153,18 @@ body {
 	html.supports-no-touchevents .navButton {
 		display: none
 	}
+	html.supports-no-touchevents .navToggle:checked ~ .navContent {
+		position: relative;
+	}
 	html.supports-no-touchevents .navContent {
+		position: relative;
 		display: block;
 		top: 0;
 		background: none;
 		box-shadow: none;
 	}
 	/* Display content as bar */
-	html.supports-no-touchevents .navContent > a, .navContent > div {
+	html.supports-no-touchevents .navContent > a, html.supports-no-touchevents .navContent > div {
 		display: inline-block;
 	}
 	html.supports-no-touchevents .navItem:hover {
@@ -214,7 +208,6 @@ body {
 /* Main Banner  */
 .banner {
 	position: relative;
-	height: 100%
 }
 /* FixedBanner
 .banner {
@@ -228,6 +221,16 @@ body {
 img.bannerImg {
 	position: relative;
 	width: 100%;
+	height: 100%;
+}
+img.ratio16-9 {
+	min-height: 56.25vw;
+}
+img.ratio16-7 {
+	min-height: 43.75vw;
+}
+img.ratio16-6 {
+	min-height: 37.50vw;
 }
 /* Overlay Text */
 .bannerOverlay {
@@ -238,13 +241,16 @@ img.bannerImg {
 	z-index: 3;
 }
 .bannerText {
+	display: table;
 	width: 100%;
 	height: 100%;
-	display: table;
+
+	font-size: 28px;
+	font-size: 3vw;
+	font-size: calc(8px + 2.5vw);
 
 	color: var(--frontCol);
-	font-size: 3vw;
-	text-shadow: 4px 4px 10px var(--backCol), -2px -2px 6px var(--backCol), 2px 2px 6px var(--backCol), 2px -2px 6px var(--backCol), -2px 2px 6px var(--backCol);
+	text-shadow: 0px 0px 0.2em black, 0px 0px 0.2em black, 0px 0px 0.2em black;
 }
 .bannerTextCentered {
 	display: table-cell;
@@ -277,7 +283,9 @@ img.bannerImg {
 }
 .mainContent {
 	padding: 10px 40px 80px 20px;
+	padding: 1vh 4vw 6vh 2vw;
 	margin: 10px 0;
+	margin: 1vw 0;
 	font-size: 17px;
 
 	background: #FFFFFF;
@@ -286,12 +294,10 @@ img.bannerImg {
 	border-style: outset;
 	border-width: 6px;
 	border-color: var(--secondaryCol);
+	border-radius: 4px;
 
 }
-html:not(.supports-no-cssvhunit):not(.supports-no-cssvwunit) .mainContent {
-	padding: 1vh 4vw 6vh 2vw;
-	margin: 1vw 0;
-}
+
 /* Minimum paragraph width */
 h1:before, h2:before, h3:before, h4:before, h5:before, h6:before, span:before, p:before {
 	content: "";
@@ -377,6 +383,42 @@ img.sideImg {
 /*#endregion CONTENT */
 
 
+/*#region SIDE */
+
+.sideNav {
+	float: none;
+	width: 100%;
+
+	margin: 0;
+	padding: 1em;
+
+	border-style: outset;
+	border-width: 4px;
+	border-color: var(--secondaryCol);
+	border-radius: 2px;
+
+	background: var(--backCol);
+	color: var(--secondaryCol);
+}
+.sideNavLinks {
+	margin: 0;
+	padding: 0;
+}
+.sideNavLinks li {
+	padding: 0.2em 0;
+	list-style: none;
+}
+.sideNavLinks a {
+	text-decoration: none;
+}
+/* Ensures that the sections the nav links point to are visible when focused */
+.section:target {
+	padding-top: 60px;
+}
+
+/*#endregion SIDE */
+
+
 /*#region FOOTER */
 
 footer {
@@ -385,3 +427,15 @@ footer {
 }
 
 /*#endregion FOOTER */
+
+@media screen and (min-width: 40em) { 
+	.container { padding: 0 1%; }
+}
+@media screen and (min-width: 65em) { 
+	.container { width: 85%; }
+	.sideNav { width: 83%; margin: 10px auto; margin: 1vw auto; }
+}
+@media screen and (min-width: 90em) { 
+	.container { width: 70%; }
+	.sideNav { width: 15%; float: left; }
+}
